--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,7 +25,8 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation"org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
@@ -33,12 +34,17 @@ dependencies {
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
     implementation 'com.squareup.retrofit2:retrofit:2.3.0'
     implementation 'com.google.dagger:dagger:2.10'
+    implementation 'com.google.android.gms:play-services-auth:11.8.0'
     kapt 'com.google.dagger:dagger-compiler:2.10'
+    implementation 'com.android.volley:volley:1.1.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
     implementation "android.arch.lifecycle:extensions:1.0.0"
+    implementation 'com.facebook.android:facebook-login:[4,5)'
+    implementation "com.google.firebase:firebase-auth:11.8.0"
     implementation "android.arch.persistence.room:runtime:1.0.0"
     kapt "android.arch.persistence.room:compiler:1.0.0"
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
 }
+apply plugin: 'com.google.gms.google-services'
